<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">All In One</string>
    <string name="action_settings">Settings</string>
    <string name="add">Lägg till</string>
    <string name="sub">Ta bort</string>
	<string name="dinnr">totalt </string>
	<string name="Wpass">Type your password!</string>
	<string name="Bact">Activite</string>
	<string name="TVinv">Invalid</string>
	<string name="Digclock">DigitalClock</string>
	<string name="BSW"> Set wallpaper</string>
	<string name="bSA">Start Activity</string>
	<string name="bSAFR">Start Activity F R </string>
	<string name="tvGot"> </string>
	<string name="tvQuestion">Hassan är...</string>
	<string name="RSnygg">Snygg</string>
	<string name="Rsot">Söt</string>
	<string name="Rbade">Både</string>
	<string name="Bret">Return</string>
	<string name="YN">Type a name, Please</string>
</resources>