<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <TextView
        android:id="@+id/YN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="25sp"
        android:text="@string/YN" />
        
    <EditText
        android:id="@+id/etSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/YN"
        android:ems="10"
        android:inputType="text" />

    <Button
        android:id="@+id/bSA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etSend"
        android:text="@string/bSA" />

    <Button
        android:id="@+id/bSAFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etSend"
        android:layout_toRightOf="@+id/bSA"
        android:text="@string/bSAFR" />

    <TextView
        android:id="@+id/tvGot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bSA"
        android:text="@string/tvGot"
        android:textSize="25sp" />

</RelativeLayout>