<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Counter">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp" 
        android:text="@string/dinnr"
        android:id="@+id/textshow"
        android:textColor="#000000" />

	<Button
     	android:layout_width="fill_parent"
     	android:layout_height="100sp"
   	   	android:gravity="center"
   	   	android:textSize="35sp"
   	   	android:text="@string/add" 
   	   	android:layout_marginTop="60sp"
   	   	android:id="@+id/Badd"
   	   	android:background="#000000"
   	   	android:textColor="#ffffff"/>
	
	<Button
     	android:layout_width="fill_parent"
     	android:layout_height="80sp"
   	   	android:gravity="center"
   	   	android:textSize="35sp"
   	   	android:text="@string/sub" 
   	   	android:layout_marginTop="170sp"
   	   	android:id="@+id/Bsub"
   	   	android:background="#000000"
   	   	android:textColor="#ffffff"/>
	    
</RelativeLayout>